# voice-backend

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  res.json
cmd/mock-agent/: main.py
cmd/seed/: main.go
cmd/server/: main.go
cmd/setup-test/: main.go
docs/: asyncapi.go  asyncapi.yaml  docs.go  swagger.json  swagger.yaml
echo-agent/: go.mod  main.go
internal/agent/: handler.go  handler_test.go  install_handler.go  install_handler_test.go  marketplace.go  marketplace_test.go  model.go  store.go  store_test.go
internal/apikey/: handler.go  handler_test.go  model.go  model_test.go  store.go  store_test.go
internal/audio/: batch.go  convert.go  convert_test.go  handler.go
internal/auth/: claims.go  jwt.go  middleware.go
internal/bootstrap/: config.go  grpc.go  handlers.go  health.go  infrastructure.go  server.go  stores.go  voice.go
internal/docs/: swagger.go
proto/: stt.proto  tts.proto
sidecar/: Dockerfile  pyproject.toml  test_mic_opus.py  test_tts.py
sidecar/sidecar/: __init__.py  audio_preprocessing.py  engine_manager.py  grpc_server.py  main.py  stt_pb2.py  stt_pb2.pyi  stt_pb2_grpc.py  stt_pipeline.py  stt_protocol.py  tts.py  tts_grpc_server.py  tts_models.py  tts_pb2.py  tts_pb2.pyi  tts_pb2_grpc.py  types.py  utils.py  vad_standalone.py
sidecar/sidecar/application/: __init__.py  partial_service.py  transcription_service.py
sidecar/sidecar/audio/: __init__.py  codecs.py  opus.py  preprocessing.py
sidecar/sidecar/domain/: __init__.py  constants.py  entities.py  exceptions.py  transcript_processor.py
sidecar/sidecar/engines/: __init__.py  parakeet_engine.py
sidecar/sidecar/infrastructure/: __init__.py
sidecar/sidecar/infrastructure/codecs/: __init__.py
sidecar/sidecar/infrastructure/grpc/: __init__.py  grpc_servicer.py  message_mapper.py
sidecar/sidecar/shared/: __init__.py  utils.py
sidecar/sidecar/stt/: __init__.py  engine_manager.py  grpc_servicer.py  message_mapper.py  partials.py  pb2.py  pb2_grpc.py  pipeline.py  transcription.py  vad.py
sidecar/sidecar/stt/engines/: __init__.py  parakeet.py  protocol.py
sidecar/sidecar/tts/: __init__.py  chatterbox_model_manager.py  encoding.py  grpc_servicer.py  model_manager.py  mp3_encoder.py  opus_encoder.py  pb2.py  pb2.pyi  pb2_grpc.py  qwen3_grpc_servicer.py  qwen3_model_manager.py  synthesis.py  voice_store.py
sidecar/tests/: conftest.py  test_audio_preprocessing.py  test_engine_manager.py  test_grpc_server.py  test_utils.py
(+106 files in other folders)
