[project]
name = "sidecar"
version = "0.1.12"
description = "Minimal VAD + STT + TTS sidecar for hu"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "soundfile>=0.13.1",
    "soxr",
    "pydub",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "kokoro-onnx[gpu]>=0.4.5,<0.5.0",
    "huggingface-hub>=0.25.0",
    "opuslib>=3.0.1",
    "lameenc>=1.8.1",
    "sounddevice>=0.5.3",
    "onnx-asr[gpu,hub]>=0.10.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[project.scripts]
sidecar = "sidecar.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    "onnxruntime-gpu>=1.22.0 ; platform_machine == 'x86_64'",
    "onnxruntime>=1.22.0 ; platform_machine != 'x86_64'"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
